tests/fails/f17.t
if not require("fail") then return end

terra foo()
    return true + 1 
end
foo()
